routes for get and upload
